--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -204,9 +204,11 @@
     "\n",
     "qprof_05new = hdf5_to_dict('data/TS45511_q05new.hdf5'); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
     "\n",
-    "all_sim = [qprof_05, qprof_1, qprof_15, qprof_05_n0, qprof_15_n0, qprof_05new]\n",
+    "qprof_05_br = hdf5_to_dict('data/TS45511_q05_br.hdf5'); qprof_05_br['title']=r'$q_{0.5}^{BR}$'; qprof_05_br['c']='xkcd:blue'; qprof_05_br['ls']='-'\n",
     "\n",
-    "print(qprof_05.keys())\n",
+    "all_sim = [qprof_05, qprof_1, qprof_15, qprof_05_n0, qprof_15_n0, qprof_05new, qprof_05_br]\n",
+    "\n",
+    "print(qprof_05_br.keys())\n",
     "\n",
     "daltonian = 0\n",
     "if daltonian:\n",
@@ -241,9 +243,9 @@
     "qprof_15['c3'] = 'xkcd:cerulean'\n",
     "qprof_15['c4'] = 'xkcd:darkish green'\n",
     "    \n",
-    "q_ar = [qprof_05,qprof_1,qprof_15,qprof_05_n0,qprof_15_n0,qprof_05new]\n",
+    "#q_ar = [qprof_05,qprof_1,qprof_15,qprof_05_n0,qprof_15_n0,qprof_05new]\n",
     "## Check length of arrays and correct if necessary\n",
-    "for iq,q in enumerate(q_ar):\n",
+    "for iq,q in enumerate(all_sim):\n",
     "    #print('Time array length = %s' % len(q['time']) )\n",
     "    for p in q.keys():\n",
     "        if type(q[p]) is np.ndarray:\n",
@@ -256,7 +258,7 @@
     "    q['time'] = q['time'][:-1]\n",
     "    \n",
     "## Defining custom values\n",
-    "for iq,q in enumerate(q_ar):\n",
+    "for iq,q in enumerate(all_sim):\n",
     "    q['gradT']             = np.gradient(q['T'],q['rg'],axis=1)\n",
     "    q['Ptransfert']        = -q['dRSpoldr'] * (-q['Er'])\n",
     "    q['Ptransfert_w_prefactor']  = -q['dRSpoldr'] * (-q['Er']) / (1 + 2 * q['q']**2)\n",
@@ -371,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "8ce0e36c-fce9-4840-a583-0c5d98c19af1",
    "metadata": {
     "jupyter": {
@@ -383,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a5790339c24d4dbeda28c1fab2a78b",
+       "model_id": "52c607b936a54a8cbde77aaa3a9b6f4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,12 +399,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d06c10b7c454424abdd8957cdecf8b69",
+       "model_id": "dc1e3b8838184d1a8230a823aca25d7a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='N', min=1), FloatSlider(value=100.0, description='dpi_ad…"
+       "interactive(children=(IntSlider(value=1, description='N', min=1), IntSlider(value=100, description='dpi_adjust…"
       ]
      },
      "metadata": {},
@@ -411,10 +413,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(N, dpi_adjust, param, param2, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool)>"
+       "<function __main__.update_plot(N, dpi_adjust, param, param2, float_range_time, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,18 +424,25 @@
    "source": [
     "plt.close('all')\n",
     "\n",
-    "fig = plt.figure(figsize=(12,6))\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = [10, 10] # for square canvas\n",
+    "matplotlib.rcParams['figure.subplot.left'] = 0\n",
+    "matplotlib.rcParams['figure.subplot.bottom'] = 0.5\n",
+    "matplotlib.rcParams['figure.subplot.right'] = 1\n",
+    "matplotlib.rcParams['figure.subplot.top'] = 1\n",
+    "\n",
+    "fig = plt.figure(figsize=(12,6), dpi=dpi_custom)\n",
     "ax_rprof = fig.add_subplot(111); ax_rprof2 = ax_rprof.twinx()\n",
     "\n",
     "def update_plot(N,dpi_adjust,param,param2,float_range_time,\n",
-    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool):\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool):\n",
     "    \n",
-    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool]) if qprof_bool]\n",
+    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool]) if qprof_bool]\n",
     "    \n",
     "    tmin_avg,tmax_avg = float_range_time\n",
-    "    \n",
+    "\n",
     "    ## Set dpi of figure\n",
-    "    fig.set_dpi(dpi_adjust)\n",
+    "    if dpi_adjust!=dpi_custom:fig.set_dpi(dpi_adjust)\n",
     "\n",
     "    ## Clear previous plot\n",
     "    ax_rprof.clear(); ax_rprof2.clear()\n",
@@ -471,12 +480,13 @@
     "\n",
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "    \n",
+    "    \n",
     "float_range_time_slider = widgets.FloatRangeSlider(value=[100e3, 145e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
     "    \n",
     "interact(update_plot, \n",
     "         N=widgets.IntSlider(min=1, max=100, step=1,value=1),\n",
     "         float_range_time=float_range_time_slider,\n",
-    "         dpi_adjust=widgets.FloatSlider(min=30, max=100, step=1,value=dpi_custom),\n",
+    "         dpi_adjust=widgets.IntSlider(min=30, max=200, step=1,value=dpi_custom),\n",
     "         param = widgets.Text(value='Er',placeholder='Type something',description='Select parameter:',disabled=False),\n",
     "         param2 = widgets.Text(value='',placeholder='Type something',description='Select parameter:',disabled=False),\n",
     "         q05_bool    = widgets.Checkbox(value=True,description='q05'),\n",
@@ -484,7 +494,8 @@
     "         q15_bool    = widgets.Checkbox(value=True,description='q15'),\n",
     "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
-    "         q05new_bool = widgets.Checkbox(value=False,description='q05new')\n",
+    "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
+    "         q05br_bool = widgets.Checkbox(value=False,description='q05br'),\n",
     "        )"
    ]
   },
@@ -499,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ef081fe5c75480dbb5830e10bdf76ca",
+       "model_id": "7cb9925bcb3d40f1ba2a510c500c29fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -520,7 +531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50bf2653ebad4ee782dec133d26d5dbd",
+       "model_id": "035d2cc19e904710ab3c4d8516790dc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -534,10 +545,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(N, dpi_adjust, param, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, it_play)>"
+       "<function __main__.update_plot(N, dpi_adjust, param, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, it_play)>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,17 +559,17 @@
     "ax_rprof = fig.add_subplot(111) \n",
     "\n",
     "def update_plot(N,dpi_adjust,param,\n",
-    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool,\n",
     "               it_play):\n",
     "\n",
     "    ## Select profiles to plot\n",
-    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool]) if qprof_bool]\n",
+    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool]) if qprof_bool]\n",
     "\n",
     "    ## Set title of figure\n",
     "    fig.suptitle(r'Study of %s' %param)\n",
     "\n",
     "    ## Set dpi of figure\n",
-    "    fig.set_dpi(dpi_adjust)\n",
+    "    if dpi_adjust!=dpi_custom: fig.set_dpi(dpi_adjust)\n",
     "\n",
     "    ## Clear previous plot\n",
     "    ax_rprof.clear()\n",
@@ -596,6 +607,7 @@
     "        q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "        q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
     "        q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
+    "        q05br_bool = widgets.Checkbox(value=False,description='q05br'),\n",
     "        it_play = widgets.Play(value=30,min=0,max=len(qprof_05['time']),step=1,interval=150,description=\"Press play\",disabled=False)\n",
     "        )"
    ]
@@ -878,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "42778907-184d-4526-9dd4-7da03b4a4a6a",
    "metadata": {
     "colab": {
@@ -899,7 +911,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97561a77b9004a798384ebf5da9c3a4b",
+       "model_id": "fc199c24f6ec4716b8d0408193a939a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -913,10 +925,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(N, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, colormap_range, dpi_adjust, symetrical_cmap)>"
+       "<function __main__.update_plot(N, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, colormap_range, dpi_adjust, symetrical_cmap, q05br_bool)>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,9 +938,9 @@
     "\n",
     "def update_plot(N,param,float_range_time,float_range_rho,\n",
     "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
-    "               colormap_range,dpi_adjust, symetrical_cmap):\n",
+    "               colormap_range,dpi_adjust, symetrical_cmap,q05br_bool):\n",
     "    \n",
-    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool]) if qprof_bool]\n",
+    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool]) if qprof_bool]\n",
     "    \n",
     "    tmin_avg,tmax_avg = float_range_time\n",
     "    rhomin_avg,rhomax_avg = float_range_rho\n",
@@ -1021,7 +1033,8 @@
     "         q15_bool    = widgets.Checkbox(value=True,description='q15'),\n",
     "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
-    "         q05new_bool = widgets.Checkbox(value=False,description='q05new')\n",
+    "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
+    "         q05br_bool = widgets.Checkbox(value=False,description='q05br')\n",
     "        )"
    ]
   },
@@ -1049,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0bd8c72f-d8f3-441d-bf05-dc7442674749",
    "metadata": {
     "colab": {
@@ -1070,7 +1083,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0d5af2e1b674e19900440d07c0dfd88",
+       "model_id": "a42045971fd4416e9a65ffda37740fc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1084,10 +1097,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, DFTradial_avg1_bool, DFTradial_avg2_bool, show_omega_theo)>"
+       "<function __main__.update_plot(N, colormap_range, dpi_adjust, param, float_range_time, float_range_rho, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, DFTradial_avg1_bool, DFTradial_avg2_bool, show_omega_theo)>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,18 +1113,12 @@
     "symetrical_cmap = 0\n",
     "\n",
     "def update_plot(N,colormap_range,dpi_adjust,param,float_range_time,float_range_rho,\n",
-    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool,\n",
     "               DFTradial_avg1_bool, DFTradial_avg2_bool, show_omega_theo):\n",
     "    tmin_avg,tmax_avg = float_range_time\n",
     "    rhomin_avg,rhomax_avg = float_range_rho\n",
     "    \n",
-    "    q_ar = []\n",
-    "    if q05_bool    : q_ar = np.append(q_ar,qprof_05)\n",
-    "    if q1_bool     : q_ar = np.append(q_ar,qprof_1)\n",
-    "    if q15_bool    : q_ar = np.append(q_ar,qprof_15)\n",
-    "    if q05n0_bool  : q_ar = np.append(q_ar,qprof_05_n0)\n",
-    "    if q15n0_bool  : q_ar = np.append(q_ar,qprof_15_n0)\n",
-    "    if q05new_bool : q_ar = np.append(q_ar,qprof_05new)\n",
+    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool]) if qprof_bool]\n",
     "    \n",
     "    plt.close('all')\n",
     "    \n",
@@ -1134,7 +1141,7 @@
     "        irhomax = (np.abs(q['rho'] - 1.1 )).argmin()\n",
     "\n",
     "        itmin = (np.abs(q['time'] - 0e3  )).argmin()\n",
-    "        itmax = (np.abs(q['time'] - 145e3 )).argmin()\n",
+    "        itmax = (np.abs(q['time'] - 90e3 )).argmin()\n",
     "\n",
     "        p_ma = uniform_filter1d(uniform_filter1d(q[param],size=N,axis=1),size=N,axis=1)\n",
     "        \n",
@@ -1204,7 +1211,7 @@
     "\n",
     "    fig.tight_layout(rect=[0, 0.03, 1, 0.95])\n",
     "\n",
-    "float_range_time_slider = widgets.FloatRangeSlider(value=[100e3, 145e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
+    "float_range_time_slider = widgets.FloatRangeSlider(value=[50e3, 90e3], min=0, max=150e3, step=1000, description='Time range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
     "    \n",
     "float_range_rho_slider = widgets.FloatRangeSlider(value=[0.84, 0.86], min=0, max=1.2, step=0.01, description='Normalized radius range', layout=Layout(width='50%'), style = {'description_width': 'initial'})\n",
     "    \n",
@@ -1221,6 +1228,7 @@
     "         q05n0_bool  = widgets.Checkbox(value=False,description='q05n0'),\n",
     "         q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
     "         q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
+    "         q05br_bool  = widgets.Checkbox(value=False,description='q05br'),\n",
     "         DFTradial_avg1_bool = widgets.Checkbox(value=False,description='Display fspectra_1'),\n",
     "         DFTradial_avg2_bool = widgets.Checkbox(value=True,description='Display fspectra_2'),\n",
     "         show_omega_theo = widgets.Checkbox(value=False,description=r'Display $\\omega_{theo}$')\n",
@@ -3301,7 +3309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
