--- a/Scan_Ip_Postdoc.ipynb
+++ b/Scan_Ip_Postdoc.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "887238a0-a1e9-4e0a-b49b-368fb0520038",
    "metadata": {
     "colab": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
    "metadata": {
     "id": "2186af80-4b36-4285-85ed-55ff5da9f574",
@@ -205,8 +205,10 @@
     "qprof_05new = hdf5_to_dict('data/TS45511_q05new.hdf5'); qprof_05new['title']=r'$q_{0.5}^{NEW}$'; qprof_05new['c']='xkcd:lightish blue'; qprof_05new['ls']='-'\n",
     "\n",
     "qprof_05_br = hdf5_to_dict('data/TS45511_q05_br.hdf5'); qprof_05_br['title']=r'$q_{0.5}^{BR}$'; qprof_05_br['c']='xkcd:blue'; qprof_05_br['ls']='-'\n",
+    "qprof_075_br = hdf5_to_dict('data/TS45511_q075_br.hdf5'); qprof_075_br['title']=r'$q_{0.75}^{BR}$'; qprof_075_br['c']='xkcd:pink'; qprof_075_br['ls']='-'\n",
+    "qprof_15_br = hdf5_to_dict('data/TS45511_q15_br.hdf5'); qprof_15_br['title']=r'$q_{1.5}^{BR}$'; qprof_15_br['c']='xkcd:red'; qprof_15_br['ls']='-'\n",
     "\n",
-    "all_sim = [qprof_05, qprof_1, qprof_15, qprof_05_n0, qprof_15_n0, qprof_05new, qprof_05_br]\n",
+    "all_sim = [qprof_05, qprof_1, qprof_15, qprof_05_n0, qprof_15_n0, qprof_05new, qprof_05_br, qprof_075_br, qprof_15_br]\n",
     "\n",
     "print(qprof_05_br.keys())\n",
     "\n",
@@ -510,14 +512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "8fdc5558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cb9925bcb3d40f1ba2a510c500c29fd",
+       "model_id": "284f96fd4bca483e86c7744026d1bf75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +533,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "035d2cc19e904710ab3c4d8516790dc3",
+       "model_id": "0fd56b32fca24c45820aac2771b4e855",
        "version_major": 2,
        "version_minor": 0
       },
@@ -545,10 +547,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.update_plot(N, dpi_adjust, param, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, it_play)>"
+       "<function __main__.update_plot(N, dpi_adjust, param, q05_bool, q1_bool, q15_bool, q05n0_bool, q15n0_bool, q05new_bool, q05br_bool, q075br_bool, q15br_bool, it_play)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,11 +561,12 @@
     "ax_rprof = fig.add_subplot(111) \n",
     "\n",
     "def update_plot(N,dpi_adjust,param,\n",
-    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool,\n",
+    "               q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,\n",
+    "               q05br_bool,q075br_bool,q15br_bool,\n",
     "               it_play):\n",
     "\n",
     "    ## Select profiles to plot\n",
-    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool]) if qprof_bool]\n",
+    "    q_ar = [qprof for qprof, qprof_bool in zip(all_sim, [q05_bool,q1_bool,q15_bool,q05n0_bool,q15n0_bool,q05new_bool,q05br_bool,q075br_bool,q15br_bool]) if qprof_bool]\n",
     "\n",
     "    ## Set title of figure\n",
     "    fig.suptitle(r'Study of %s' %param)\n",
@@ -608,7 +611,9 @@
     "        q15n0_bool  = widgets.Checkbox(value=False,description='q15n0'),\n",
     "        q05new_bool = widgets.Checkbox(value=False,description='q05new'),\n",
     "        q05br_bool = widgets.Checkbox(value=False,description='q05br'),\n",
-    "        it_play = widgets.Play(value=30,min=0,max=len(qprof_05['time']),step=1,interval=150,description=\"Press play\",disabled=False)\n",
+    "        q075br_bool = widgets.Checkbox(value=False,description='q075br'),\n",
+    "        q15br_bool = widgets.Checkbox(value=False,description='q15br'),\n",
+    "        it_play = widgets.Play(value=30,min=0,max=len(qprof_05_br['time']),step=1,interval=150,description=\"Press play\",disabled=False)\n",
     "        )"
    ]
   },
@@ -3309,7 +3314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
