--- a/Fetch_SOLEDGE_data.ipynb
+++ b/Fetch_SOLEDGE_data.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
       "plasmaFinal.h5 is file\n",
       "Plasma is folder\n",
       "soledge3x.status is file\n",
-      "<paramiko.sftp_file.SFTPFile object at 0x000001665FED3A90>\n",
+      "<paramiko.sftp_file.SFTPFile object at 0x000001F4BD816940>\n",
       "<KeysViewHDF5 ['NZones', 'Nelts', 'Nspecies', 'core', 'dt', 'metadata', 'tExec', 'tExecCumu', 'tNextSave', 'tcpu', 'tcpuCumu', 'tsimu', 'zone1', 'zone2']>\n",
       "[[[ 1.23511257e-05  1.24455159e-05  1.24972011e-05 ...  1.24455159e-05\n",
       "    1.24972011e-05  1.23062044e-05]\n",
@@ -133,13 +133,6 @@
       "    0.00000000e+00  0.00000000e+00]\n",
       "  [-1.49219942e-03 -1.49183727e-03 -1.49170404e-03 ... -1.49183727e-03\n",
       "   -1.49170404e-03 -1.49173079e-03]]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Socket exception: Une connexion existante a dû être fermée par l’hôte distant (10054)\n"
      ]
     }
    ],
@@ -296,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -322,13 +315,7 @@
       "Iteration 16 / 70\n",
       "Iteration 17 / 70\n",
       "Iteration 18 / 70\n",
-      "Iteration 19 / 70\n",
-      "Iteration 20 / 70\n",
-      "Iteration 21 / 70\n",
-      "Iteration 22 / 70\n",
-      "Iteration 23 / 70\n",
-      "Iteration 24 / 70\n",
-      "Iteration 25 / 70\n"
+      "Iteration 19 / 70\n"
      ]
     }
    ],
@@ -368,11 +355,11 @@
     "\n",
     "## Map the get_FS_profile function to the filepath_ar array\n",
     "if connect():\n",
-    "    Er_time_trace = list(map(get_FS_profile, filepath_ar[:25]))\n",
+    "    Er_time_trace = list(map(get_FS_profile, filepath_ar[51:]))\n",
     "\n",
     "    #Er_time_trace = Parallel(n_jobs=6, prefer=\"threads\")(delayed(get_FS_profile)(x) for x in filepath_ar[:5])\n",
     "\n",
-    "np.save('Er_time_trace.npy', Er_time_trace)"
+    "np.save('ExB_time_trace_51_end.npy', Er_time_trace)"
    ]
   },
   {
@@ -528,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   },
   "orig_nbformat": 4
  },
