--- a/Fetch_SOLEDGE_data.ipynb
+++ b/Fetch_SOLEDGE_data.ipynb
@@ -374,20 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(25, 64)\n"
+      "(68, 64)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a8765ae583d4c068d96ddaf3cd17215",
+       "model_id": "ffdd1bb54a624a39846e0297954d00cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,10 +401,10 @@
     {
      "data": {
       "text/plain": [
-       "Text(0.5, 1.0, 'Radial profile of $V_{E\\\\times B}$ (black: initial, yellow: final)')"
+       "Text(0.5, 1.0, 'Avg between  $616729.7< t[?] < 633453.3$')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,9 +413,12 @@
     "import ipywidgets as widgets\n",
     "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "from cycler import cycler\n",
     "from matplotlib.colors import Normalize\n",
+    "\n",
+    "plt.rc('font',size=18)\n",
     "\n",
     "# Change color cycler to have color gradient based on existing colormap\n",
     "cmap = plt.cm.inferno\n",
@@ -424,27 +427,32 @@
     "plt.rc('axes', prop_cycle=(cycler('color', colors)))\n",
     "\n",
     "## Load ExB.e_theta time trace\n",
-    "Er = np.load('Er_time_trace.npy')\n",
+    "ExB_0_25 = np.load('ExB_time_trace_0_25.npy')\n",
+    "ExB_26_50 = np.load('ExB_time_trace_26_50.npy')\n",
+    "ExB_51_end = np.load('ExB_time_trace_51_end.npy')\n",
+    "ExB = np.vstack( (ExB_0_25,ExB_26_50,ExB_51_end) )\n",
     "\n",
     "## Define radial coordinate array (temp)\n",
-    "rho_ar = np.linspace(0.7,1,Er.shape[1])\n",
+    "rho_ar = np.linspace(0.7,1,ExB.shape[1])\n",
     "\n",
-    "print(Er.shape)\n",
+    "print(ExB.shape)\n",
     "\n",
     "fig = plt.figure(figsize=(10,8))\n",
     "ax = fig.add_subplot(111)\n",
     "\n",
     "ax.set_xlabel(r'$r/a$')\n",
     "\n",
-    "for i in range(Er.shape[0]):\n",
-    "    ax.plot(rho_ar,Er[i,:], lw=1.5)\n",
+    "for i in range(ExB.shape[0]):\n",
+    "    ax.plot(rho_ar,ExB[i,:], lw=1.)\n",
     "\n",
-    "ax.plot(rho_ar,np.mean(Er, axis=0), lw=3, color='r')\n",
+    "ax.plot(rho_ar,np.mean(ExB, axis=0), lw=5, color='r')\n",
     "\n",
     "ax.grid()\n",
     "ax.axhline(y=0, color='k', linestyle='--')\n",
+    "ax.axvline(x=1, color='k', linestyle='--')\n",
     "\n",
-    "ax.set_title(r'Radial profile of $V_{E\\times B}$ (black: initial, yellow: final)')\n"
+    "fig.suptitle(r'Radial profile of $V_{E\\times B}$ (black: initial, yellow: final)')\n",
+    "ax.set_title(r'Avg between  $616729.7< t[?] < 633453.3$')\n"
    ]
   },
   {
@@ -497,6 +505,13 @@
     "\n",
     "print(numbers1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -515,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
